# ht-logistic-workspace-v2

./: .gitignore  CODEX_SUMMARY.md  PROJECT_HANDOFF.md  README.md  deploy.ps1  dev.ps1
pi-agent-config/: SYSTEM.md
pi-agent-config/skills/: assistant.md  automation.md  data-analysis.md  docs-qa.md
pi-extensions/: EXTENSION_INSTALL.md  all-in-one.ts  install.ps1  package.json
python-sidecar/: ht-sidecar.spec  main.py  requirements.txt  setup.ps1
python-sidecar/tests/: test_data_analysis.py  test_logistics_data.py
python-sidecar/tools/: __init__.py  chicun.py  customs_extractor.py  customs_generator.py  data_analysis.py  extract_customs.py  hs_code.py  invoice_packing.py  logistics_data.py  packing_list.py
python-sidecar/tools/assets/: 格式.xlsx
scripts/: build-and-release.ps1  build-installer.ps1  build-installer.sh  install-python.ps1
tauri-app/: index.html  package-lock.json  package.json  vite.config.ts
tauri-app/src/: App.tsx  BranchNavigator.tsx  Chart.tsx  CommandPalette.tsx  ExtensionManager.tsx  FileBrowser.tsx  LogisticsDataPanel.tsx  Markdown.tsx  ToolsPanel.tsx  global.d.ts  main.tsx  pi-client.ts  styles.css  types.ts  updater.ts  utils.test.ts  utils.ts
tauri-app/src-tauri/: Cargo.toml  build.rs  installer-hooks.nsh  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: main.rs
